Revert "SDIT-1808: 🎨 Rename mocking of auth user token (#2199)" (#2201)
This reverts commit 57492297f90040f3c084602352e80f296a64e01a.